# inPAsearchBot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/bot/: __main__.py  catalogs.py  config.py  handlers.py  inpa.py  notifier.py  poll.py  state.py  state_sqlite.py
data/: .gitkeep
